src/test/deca/context/invalid/decaObjet/fields/05wrongTypeAssign.deca
// Description:
//    Affectation d'un type float dans un champs int
//
// Resultats:
//    05wrongTypeAssign.deca:15:10:
//
// Historique:
//    cree le 16/06/2022

class A {
    int x;
}
{
    A a = new A();
    a.x = 1.0;
}